--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "freshman.sqlitediary2"
+        applicationId "freshman.sqlitediary3"
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.github.ivbaranov:materialfavoritebutton:0.1.2'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'com.android.support:design:25.1.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
 }
