--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 
     <application
         android:allowBackup="true"
@@ -11,15 +15,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SqliteDiary2">
+        <activity android:name=".SqliteDiary2" />
+        <activity android:name=".DiaryDetail" />
+        <activity android:name=".SettingEvaluationDisplay" />
+        <activity android:name=".menu.StartMenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DiaryDetail" />
-        <activity android:name=".SettingEvaluationDisplay" />
+        <activity android:name=".favorite.FavoriteActivity" />
+        <activity android:name=".search_near.SearchNearActivity" />
+        <activity android:name=".select_by_map.SelectByMapActivity" />
+        <activity android:name=".status.StatusActivity"></activity>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAfTYWETia22ez444OUf-ba30aEL9JZOeU"/>
     </application>
 
 </manifest>
